--- a/week10/pom.xml
+++ b/week10/pom.xml
@@ -5,14 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsight</groupId>
-    <artifactId>workbook-8</artifactId>
+    <artifactId>week10</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>loggerexercise</module>
-        <module>mod3</module>
-        <module>northwindtraders</module>
-    </modules>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
