--- a/workbook-8/sakilamoviesv2/pom.xml
+++ b/workbook-8/sakilamoviesv2/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.pluralsight</groupId>
+        <artifactId>workbook-8</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.pluralsight</groupId>
-    <artifactId>workbook-8</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>loggerexercise</module>
-        <module>mod3</module>
-        <module>northwindtraders</module>
-        <module>sakilamovies</module>
-        <module>sakilamoviesv2</module>
-    </modules>
+    <artifactId>sakilamoviesv2</artifactId>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -27,6 +22,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.12.0</version>
         </dependency>
     </dependencies>
 
